# grafica

./: .gitignore  CMakeLists.txt  README.md
cpp_test/: main.cpp
esempi/: CMakeLists.txt
esempi/cpp_test/: CMakeLists.txt
esempi/esempi_serie_shader/: CMakeLists.txt
esempi/esempi_serie_shader/opengl3/: shaders_loader.cpp
esempi/esempi_serie_shader/opengl3/opengl3_cube/: CMakeLists.txt  Vertex.cpp  Vertex.h  box.cpp  opengl3_cube.cpp
esempi/esempi_serie_shader/opengl3/opengl3_cube/shaders/: shader.frag
esempi/esempi_serie_shader/opengl3/opengl3_triangolo/: CMakeLists.txt  Makefile  cmake_install.cmake  opengl3_triangolo.cpp
esempi/esempi_serie_shader/opengl3/opengl3_triangolo_lookat/: CMakeLists.txt  opengl3_triangolo_lookat.cpp
esempi/esempi_serie_shader/opengl3/opengl3_triangolo_lookat/shaders/: shader.vert
esempi/esempi_serie_shader/opengl3/opengl3_triangolo_trasformazioni/: CMakeLists.txt  Makefile  cmake_install.cmake  opengl3_triangolo_trasformazioni.cpp
esempi/esempi_serie_shader/opengl3/opengl3_triangolo_trasformazioni/shaders/: shader.frag  shader.vert
esempi/frustum/: frustum.cpp  frustum.h  plane.cpp  plane.h
esempi/serie11/Salvataggio-file-bmp/: CMakeLists.txt  RgbImage.cpp
esempi/serie11/bitmap/: CMakeLists.txt  bitmap.c
esempi/serie11/drawf/: CMakeLists.txt  drawf.c
esempi/serie11/font/: CMakeLists.txt  font.c
esempi/serie11/image/: CMakeLists.txt  image.c
esempi/serie12/Monalisa/: CMakeLists.txt  Read_bmp.cpp  monalisa.cpp
esempi/serie12/Salvataggio-file-bmp/: TextureBMP.cpp  compilare.txt  planet.cpp
esempi/serie12/TextureBMP/: CMakeLists.txt  RgbImage.cpp  TextureBMP.cpp  compilare.txt
esempi/serie12/checker/: CMakeLists.txt  checker.c
esempi/serie3/: CMakeLists.txt
esempi/serie3/backfaceculling/: CMakeLists.txt  backfaceculling  cmake_install.cmake  main  main.cpp
esempi/serie3/colorbuffer/: CMakeLists.txt  colorbuffer  colorbuffer.c
esempi/serie3/edge/: CMakeLists.txt  Makefile  cmake_install.cmake  edge.c
esempi/serie3/icosaedro_suddiviso/: Makefile  cmake_install.cmake  icosaedro_suddiviso  icosaedro_suddiviso.c
esempi/serie3/line_stripple/: CMakeLists.txt  Makefile  cmake_install.cmake
esempi/serie3/polys/: CMakeLists.txt  cmake_install.cmake  polys  polys.c
esempi/serie3/primitive/: CMakeLists.txt  Makefile  cmake_install.cmake
esempi/serie3/rettangolo/: Makefile  rettangolo.c
esempi/serie3/triangle_strip/: CMakeLists.txt  Makefile  triangle_strip
esempi/serie3/triangolo/: CMakeLists.txt  Makefile  triangolo.c
esempi/serie3/triangolo_array/: cmake_install.cmake  triangolo_array  triangolo_array.c
esempi/serie4/: CMakeLists.txt
esempi/serie4/double/: Makefile  double.c
esempi/serie4/double_timer/: Makefile  double_timer.c
esempi/serie4/glut_hello/: CMakeLists.txt
esempi/serie4/sb2db/: CMakeLists.txt  Makefile  sb2db.c
esempi/serie4/text/: text.c
esempi/serie4/wired_cube/: wired_cube.c
esempi/serie5/rotate_teapot/: CMakeLists.txt
esempi/serie6/: PIST_Lit.c  planet.c  pushpop.c  rotateaboutvertex.c  rotazione.c  sunellipsemoon.c
esempi/serie7/: cubo  cubo.c
esempi/serie8/light/: CMakeLists.txt  light.c
esempi/serie8/light2/: CMakeLists.txt  light2.c
esempi/serie8/movelight/: CMakeLists.txt  movelight.c
esempi/serie8/smooth/: CMakeLists.txt  smooth.c
esempi/serie9/icosaedro_flat_smooth/: CMakeLists.txt  Makefile  icosaedro_flat_smooth.c
esempi/serie9/lightpyramid/: CMakeLists.txt  Makefile  lightpyramid  lightpyramid.c
esempi/serie9/material/: CMakeLists.txt  Makefile  material  (+1 more)
glut_test/: CMakeLists.txt
s11_casa/: CMakeLists.txt  README.txt  RgbImage.h  camera.h  draw_utils.h  house.h  light.cpp  light.h  main.cpp  main.h
s12_casa/: CMakeLists.txt  README.txt  RgbImage.cpp  camera.cpp  draw_utils.cpp  draw_utils.h  house.cpp  main.cpp  vertex.cpp
s13_casa/: CMakeLists.txt  README.txt  Texture.cpp  Texture.h  box.cpp  box.h  camera.cpp  camera.h  draw_utils.cpp  draw_utils.h  house.cpp  house.h  main.cpp  main.h  shaders_loader.cpp  solid.cpp  solid.h  vertex.cpp  vertex.h
s13_casa/shaders/: shader.vert
s3_bandiera/: CMakeLists.txt  main.cpp
s3_piramide/: CMakeLists.txt  README.txt  main.cpp
s4_casa/: CMakeLists.txt  README.txt  draw_utils.cpp  draw_utils.h  main.cpp
s5_casa/: CMakeLists.txt  README.txt  draw_utils.cpp  draw_utils.h  house.cpp  house.h  main.cpp
s6_casa/: CMakeLists.txt  README.txt  draw_utils.cpp  draw_utils.h  house.cpp  house.h  main.cpp
s7_casa/: CMakeLists.txt  README.txt  camera.cpp  camera.h  draw_utils.cpp  draw_utils.h  house.cpp  house.h  main.cpp  main.h  vertex.cpp  vertex.h
s8_casa/: CMakeLists.txt  draw_utils.cpp  draw_utils.h  house.cpp  house.h  light.cpp  light.h  main.cpp  main.h  vertex.cpp  vertex.h
serie3/backfaceculling/: Makefile
serie3/colorbuffer/: Makefile  cmake_install.cmake
serie3/icosaedro_suddiviso/: CMakeLists.txt
serie3/line_stripple/: line_stripple.c
serie3/polys/: Makefile
serie3/primitive/: primitive  primitive.c
serie3/rettangolo/: CMakeLists.txt  cmake_install.cmake  rettangolo
serie3/triangle_strip/: cmake_install.cmake  triangle_strip.c
serie3/triangolo/: cmake_install.cmake  triangolo
serie3/triangolo_array/: CMakeLists.txt  Makefile
serie4/: CMakeLists.txt
serie4/blender/: CMakeLists.txt  Makefile  cmake_install.cmake
serie4/double/: CMakeLists.txt
serie4/double_timer/: cmake_install.cmake
serie4/glut_hello/: Makefile  cmake_install.cmake  glut_hello.c
serie4/sb2db/: CMakeLists.txt  sb2db
serie4/serie4/blender/: blender.c
serie4/serie4/double/: cmake_install.cmake
serie4/serie4/double_timer/: CMakeLists.txt
serie4/serie4/sb2db/: cmake_install.cmake  sb2db.c
serie4/serie4/text/: Makefile  cmake_install.cmake  text
serie4/serie4/wired_cube/: CMakeLists.txt
serie4/text/: CMakeLists.txt
serie4/wired_cube/: Makefile  cmake_install.cmake  wired_cube
serie5/rettangoli/: CMakeLists.txt  rettangoli.c
serie5/rotate_teapot/: rotate_teapot.c
serie6/: cubo.c  look_at.c  robot.c  rotateaboutvertex2axes.c
serie_3/: CMakeLists.txt  main.cpp
(+4 files in other folders)
